# societies-of-thought

./: .gitignore  README.md  pyproject.toml
analysis/: hse.py  hse_ppo_emergence.py  jspace_tier0.py  jspace_tier1.py  weight_spectra.py
briefs/: faithful_rl_replication_scope.md  jax_jlens_port.md  rl_replication.md  weight_spectra_htsr.md
docs/: JSPACE.md  anthropic_claims_scorecard.md  flax_rope_bug.md  replication_and_tools.md  why_layers.md
flax_compat/: rope_fix.py
penzai_backend/: llama3_rope.py  loader.py
results/: hook_point.json
rl/: claimB_data.py  generate_sft.py  grpo_config.py  preflight.py  reward.py  sft_prime.py  train_grpo.py  verify_provenance.py
scripts/: claimB_pod.sh  fix_hf_cache_perms.sh  gate_dose.sh  queue_gate.sh  run_ml_intern.sh  run_rl_arm.sh  run_stages.sh  runpod.py  sbatch_layer_sweep.sh  sbatch_rl_smoke.sh  setup.sh
sot/: analyze.py  calibrate.py  data.py  debug_sae.py  extract.py  features.py  gemma_sae.py  grade.py  registry.py  regrade.py  run_sweep.py  sae.py  sources.py  steering.py  sweep_grid.py  validate_hook.py
spikes/: flax_rope_check.py  flax_rope_seqsweep.py  mutation_check_loader.py  penzai_backend_spike.py
tests/: test_claimB_data.py  test_eval_reward_agree.py  test_feature_sources.py  test_flax_rope_fix.py  test_gemma_sae.py  test_gemma_scope_layout.py  test_grade.py  test_grpo_config.py  test_grpo_schedule.py  test_hse.py  test_jspace.py  test_jspace_tier1.py  test_llama3_rope.py  test_model_registry.py  test_penzai_loader.py  test_preflight.py  test_regrade.py  test_reward.py  test_reward_antihack.py  (+5 more)
(+17 files in other folders)
